--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SOCKETIO_HOST=http://138.124.180.37:3000
+# VITE_SOCKETIO_HOST=http://138.124.180.37:3000
+VITE_SOCKETIO_HOST=http://localhost:50911/
