--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_SOCKETIO_HOST=http://138.124.180.37:3000
-VITE_SOCKETIO_HOST=http://localhost:50911/
+# VITE_SOCKETIO_HOST=http://138.124.180.37:3001/
+VITE_SOCKETIO_HOST=http://192.168.0.116:3001/
