--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-qr-code": "^2.0.11",
     "sass": "^1.59.2",
     "socket.io-client": "^4.6.1"
   },
