--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4",
     "socket.io": "^4.6.1"
   },
