--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.3"
+
 services:
   api:
     build: ./backend
@@ -6,11 +7,15 @@ services:
       - "3001:3001"
     volumes:
       - ./backend:/app
-      - /app/node_modules
+      - backend:/app/node_modules
   client:
     build: ./frontend
     ports:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend:/app/node_modules
+
+volumes:
+  frontend:
+  backend:
