--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,11 @@ services:
       - "3001:3001"
     volumes:
       - ./backend:/app
-      - backend:/app/node_modules
+      - backend_node_modules:/app/node_modules
   client:
     build: ./frontend
     ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - frontend:/app/node_modules
+      - "80:80"
 
 volumes:
-  frontend:
-  backend:
+  backend_node_modules:
